@@ -21,7 +21,10 @@ import java.io.Closeable;
 import java.io.IOException;
 
 /** @lucene.internal */
-public class IOUtils {
+public final class IOUtils {
+
+  private IOUtils() {} // no instance
+
   /**
    * <p>Closes all given <tt>Closeable</tt>s, suppressing all thrown exceptions. Some of the <tt>Closeable</tt>s
    * may be null, they are ignored. After everything is closed, method either throws <tt>priorException</tt>,
