@@ -28,7 +28,9 @@ import org.apache.lucene.index.IndexReader;
  *
  * @lucene.internal
  */
-public class ReaderUtil {
+public final class ReaderUtil {
+
+  private ReaderUtil() {} // no instance
 
   public static class Slice {
     public static final Slice[] EMPTY_ARRAY = new Slice[0];
